# K-Means

./: .gitignore  README.md
Python/: kmeans.py  scaling_experiments.py
Python/experiments_files/: strong_scaling_python4.csv  weak_scaling_python.csv  weak_scaling_python2.csv
Rust/kmeans/: Cargo.toml
Rust/kmeans/experiments_files/: strong_scaling_rust.csv  strong_scaling_rust10.csv  strong_scaling_rust11.csv  strong_scaling_rust12.csv  strong_scaling_rust2.csv  strong_scaling_rust5.csv  strong_scaling_rust6.csv  strong_scaling_rust8.csv  strong_scaling_rust9.csv  weak_scaling_rust.csv  weak_scaling_rust5.csv  weak_scaling_rust55.csv  weak_scaling_rust6.csv  weak_scaling_rust7.csv
Rust/kmeans/log_files/: kmeans_log.json  kmeans_log2.json  kmeans_log3.json  kmeans_seq_log.json
Rust/kmeans/src/: kmeans_log.rs  kmeans_par.rs  kmeans_seq.rs  main.rs  main_with_saving.rs  point.rs  scaling_experiments.rs  visualization.rs
Rust/kmeans/src/kmeans_with_saving_data/: main_with_saving.rs  point.rs
